<resources>
    <string name="app_name" translatable="false">Strength Gym App</string>
    <string name="cardio" ><a href="https://www.youtube.com/watch?v=EDD4GxHVess">Cardio</a></string>
    <string name="strength"><a href="https://www.youtube.com/watch?v=7DaE7pi5wfg">Strength</a></string>
    <string name="flexibility" ><a href="https://www.youtube.com/watch?v=Ef6LwAaB3_E">Flexibility</a></string>
    <string name="title1">Where fitness</string>
    <string name="title2">meets health.</string>
    <string name="desc">Nice-looking body and powerful organism are interconnected - and we can help you with both.</string>
    <string name="motivation">If you can dream it, you can do it.</string>
    <string name="facttitle">Did you know</string>
    <string name="fact">Regular exercise
helps lower blood pressure and cholesterol levels. Two major risk factors for heart disease.</string>
    <string name="select_workout">Select Workout</string>
    <string name="hello">Hello,</string>
    <string name="age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="kg">kg</string>
    <string name="cm">cm</string>
    <string name="years">years</string>
    <string name="classes">Scheduled Classes</string>
    <string name="header">Create your Profile</string>
    <string name="name">Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="image">Upload Image</string>
    <string name="save">Save</string>
    <string name="network">Network Type Required:</string>
    <string name="idle">Device Idle</string>
    <string name="charging">Charging</string>
    <string name="scheduleJob">Schedule Job</string>
    <string name="cancelJobs">Cancel Jobs</string>
    <string name="none">None </string>
    <string name="wifi">Wifi </string>
    <string name="any">Any </string>
    <string name="requires">Requires:</string>
    <string name="seekBarLabel">Override Deadline: </string>
    <string name="notSet">Not Set</string>

    <string-array name="classes_names">
        <item>Yoga</item>
        <item>HIIT</item>
        <item>Boxing</item>
        <item>Zumba</item>
        <item>Fitness</item>
    </string-array>

    <string-array name="descriptions">
        <item>Yoga is an ancient and complex practice, rooted in Indian philosophy. It began as a spiritual practice but has become popular as a way of promoting physical and mental well-being,Help people quit smoking.</item>
        <item>HIIT is a type of interval training exercise. It incorporates several rounds that alternate between several minutes of high intensity movements to significantly increase the heart rate to at least 80%.</item>
        <item>Boxing (also known as "Western boxing" or "pugilism") is a combat sport in which two people, usually wearing protective gloves and other protective equipment such as hand wraps and mouthguards.</item>
        <item>One of the first things you need to understand about Zumba is that the motto is literally “Ditch the workout—Join the party!” And yeah, that might sound like they’re not taking fitness super seriously.</item>
        <item>The first fitness service powered by Apple Watch.11 workout types, including HIIT, Yoga, and Strength. And guided meditations . Stay motivated with real‑time metrics, like your heart rate, onscreen . New workouts every week.</item>
    </string-array>

</resources>