<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/black"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="650dp"
        android:layout_gravity="center"
        android:id="@+id/sclview"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginTop="40sp"
                android:text="@string/title1"
                android:textColor="@color/blue"
                android:textSize="45sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title2"
                android:textColor="@color/blue"
                android:textSize="45sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text1"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/desc"
                    android:textColor="@color/white"
                    android:textSize="22sp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/first" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner_view"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/img2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/motivation"
                    android:textColor="@color/white"
                    android:textSize="22sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner_view2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/facttitle"
                        android:textColor="@color/blue"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="180dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="25sp"
                        android:text="@string/fact"
                        android:textColor="@color/black"
                        android:textSize="22sp"
                        android:textStyle="normal" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:src="@drawable/img3" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="8dp"
        app:layout_constraintTop_toBottomOf="@+id/sclview"
        app:layout_constraintBaseline_toBottomOf="parent"
        >

        <ImageButton
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:srcCompat="@drawable/ic_home" />

        <ImageButton
            android:id="@+id/workout"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:srcCompat="@drawable/ic_workout" />

        <ImageButton
            android:id="@+id/schedule"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:srcCompat="@drawable/ic_classes" />

        <ImageButton
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            app:srcCompat="@drawable/ic_user" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>